Fix a z-index issue when you have multiple tags widgets after each other

--- a/src/Resources/public/backend.css
+++ b/src/Resources/public/backend.css
@@ -4,6 +4,10 @@
     z-index: 1;
 }
 
+.cfg-tags:has(.selectize-input.input-active.dropdown-active) {
+    z-index: 2;
+}
+
 .cfg-tags-all {
     padding: 5px 0 5px 0;
 }
